--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@
   font-family: "Segoe UI", sans-serif;
 }
 
-html {
-  font-size: 62.5%;
-}
-
 #main {
   width: 100%;
   height: 100%;
@@ -16,19 +12,18 @@ html {
 
 .pic {
   width: 100%;
-  height: 45rem;
+  height: 450px;
   background-image: url(/Img/MainPic.png);
   background-size: cover;
-  background-position: center;
   position: relative;
 }
-
 #text {
   position: absolute;
-  width: 30%;
-  height: auto;
+  width: 300px;
+  height: 300px;
   margin-left: 10%;
-  top: 8rem;
+  margin-top: 80px;
+  /* background-color: black;  */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -36,217 +31,186 @@ html {
 
 #text h1 {
   color: aliceblue;
-  font-size: 5rem;
-  line-height: 4.7rem;
+  font-size: 50px;
+  line-height: 47px;
 }
-
 #intro h3 {
   color: aliceblue;
-  font-weight: 100;
-  margin-bottom: 2rem;
+  /* margin-left: 10%; */
+  font-weight: 100px;
+  margin-bottom: 10%;
   opacity: 0.6;
-  line-height: 1.8rem;
+  line-height: 18px;
+  /* margin-top: 20px; */
 }
 
 #pg {
   color: aqua;
-  letter-spacing: 0.25rem;
+  letter-spacing: 2.5px;
 }
 
 #about {
   width: 100%;
-  padding: 2rem;
+  height: 150px;
+  padding: 20px;
   background-color: #272b3b;
 }
-
 #about h3 {
-  font-size: 3rem;
+  font-size: 30px;
   color: #fff;
 }
 
 #about p {
-  font-size: 1.1rem;
+  font-size: 11px;
+  font-family: Arial, Helvetica, sans-serif;
   color: rgb(164, 160, 160);
   font-family: Arial, Helvetica, sans-serif;
 }
-
 #sec {
   width: 100%;
-  background-color: #242734;
+  height: 300px;
+  /* background-color: #242734; */
   display: flex;
-  flex-wrap: wrap;
-  padding: 5rem 2rem;
+  padding: 50px;
   justify-content: space-evenly;
-  gap: 2rem;
 }
-
-#box1,
-#box2 {
-  width: 20rem;
-  height: auto;
+#box1 {
+  width: 200px;
+  height: 220px;
   background-color: #424657;
   border-radius: 5%;
-  padding: 2rem;
+  padding: 20px;
 }
-
-#box1 h3,
-#box2 h3 {
-  line-height: 1.8rem;
+#box1 h3 {
+  line-height: 18px;
   color: azure;
-  font-size: 1.8rem;
+  font-size: 18px;
 }
-
-#box1 p,
+#box1 p {
+  color: azure;
+  font-size: 9px;
+  margin-top: 20px;
+}
+#box2 {
+  width: 200px;
+  height: 220px;
+  background-color: #424657;
+  border-radius: 5%;
+  padding: 20px;
+}
+#box2 h3 {
+  line-height: 18px;
+  color: azure;
+}
 #box2 p {
   color: azure;
-  font-size: 0.9rem;
-  margin-top: 2rem;
+  font-size: 9px;
+  margin-top: 20px;
 }
-
 #pro {
   width: 100%;
-  padding: 2rem;
+  height: 120px;
+  padding: 20px;
+  align-items: center;
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-evenly;
-  background-color: #2f3140;
-  gap: 1.5rem;
 }
-
-#name {
-  font-size: 1.9rem;
+/* #name {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+/* font-size: 19px;
   font-family: fantasy;
   color: rgb(145, 93, 93);
-}
+} */
 
-#Code,
-#Bee,
-#Git {
+#Code {
   width: 20%;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #fff;
 }
-
-#Code img,
-#Bee img,
-#Git img {
-  width: 2rem;
-  margin-left: 0.8rem;
-  margin-top: 0.4rem;
+#Code img {
+  width: 20px;
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
+  margin-top: 4px;
 }
-
+#Bee {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+}
 #Bee img {
-  width: 3rem;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  margin-left: 4px;
+  margin-top: 2px;
 }
-
+#Git {
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+}
 #Git img {
-  width: 1.7rem;
+  width: 17px;
+  display: flex;
+  align-items: center;
+  margin-left: 4px;
+  margin-top: 4px;
 }
 
 #cont {
   width: 100%;
-  padding: 2rem;
-  background-color: #272b3b;
+  height: auto;
+  padding: 20px;
+  background-color: #1b1e2a;
+  text-align: center;
+  padding: 3rem;
 }
-
 #cont a {
   text-decoration: none;
   color: azure;
 }
-
 #cont h2 {
-  font-size: 3.8rem;
+  font-size: 38px;
   color: #5e73ac;
 }
-
 #cont i {
   color: azure;
 }
 
-@media (max-width: 768px) {
-  #text {
-    width: 80%;
-    margin-left: 5%;
-    top: 5rem;
-  }
-
-  #text h1 {
-    font-size: 3.5rem;
-    line-height: 3.8rem;
-  }
-
-  #intro h3 {
-    font-size: 1.3rem;
-  }
-
-  #pro,
-  #sec {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  #Code,
-  #Bee,
-  #Git {
-    width: 100%;
-    justify-content: flex-start;
-  }
+.progress {
+  /* border: 2px solid red; */
+  background: #272b3b;
 }
-
-@media (max-width: 480px) {
-  html {
-    font-size: 55%;
-  }
-
-  .pic {
-    height: 30rem;
-  }
-
-  #text {
-    width: 90%;
-    top: 4rem;
-    margin-left: 5%;
-  }
-
-  #text h1 {
-    font-size: 3rem;
-    line-height: 3.4rem;
-  }
-
-  #intro h3 {
-    font-size: 1.2rem;
-  }
-
-  #about h3 {
-    font-size: 2rem;
-  }
-
-  #about p {
-    font-size: 1rem;
-  }
-
-  #box1,
-  #box2 {
-    width: 90%;
-  }
-
-  #cont h2 {
-    font-size: 2.5rem;
-  }
-
-  #Code img,
-  #Bee img,
-  #Git img {
-    width: 2rem;
-    margin: 0 0.5rem;
-  }
-
-  #Code,
-  #Bee,
-  #Git {
-    width: 100%;
-    justify-content: flex-start;
-  }
+.progress h2 {
+  text-align: center;
+  font-size: 2.5rem;
+  color: rgb(255, 255, 255);
+  padding: 2rem;
+}
+.sec h2 {
+  text-align: center;
+  font-size: 2rem;
+  color: rgb(255, 255, 255);
+  padding: 1rem;
+}
+.card {
+  padding: 2rem;
+  /* margin: 2rem; */
+  /* border: 3px solid red; */
+  background: #242734;
+}
+.card h2 {
+  text-align: center;
+  font-size: 2rem;
+  color: rgb(255, 255, 255);
+  padding: 1rem;
 }
